--- a/Betasec/CTF/Cryptography/Base65536.md
+++ b/Betasec/CTF/Cryptography/Base65536.md
@@ -5,5 +5,5 @@ Base65536 uses only "safe" Unicode code points - no unassigned code points, no w
 
 ## Examples
 
-𤇃𢊻𤄻嶜𤄋𤇁𡊻𤄛𤆬𠲻𤆻𠆜𢮻𤆻ꊌ𢪻𤆻邌
+`𤇃𢊻𤄻嶜𤄋𤇁𡊻𤄛𤆬𠲻𤆻𠆜𢮻𤆻ꊌ𢪻𤆻邌`
 
